--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <header>
                 <h1>Restaurant Menu</h1>
 
-                <nav>
+                <nav class="filter-menu">
                     <button type="button" data-id="all" class="filter-btn">All</button>
                     <button type="button" data-id="breakfast" class="filter-btn">Breakfast</button>
                     <button type="button" data-id="lunch" class="filter-btn">Lunch</button>
